kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: areas-backend
    labels:
        app: areas-backend
    namespace: blog
spec:
    replicas: 1
    selector:
        matchLabels:
            app: areas-backend
    template:
        metadata:
            labels:
                app: areas-backend
        spec:
            containers:
                - name: areas-backend-service
                  image: areas_server:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 7000
                - name: areas-backend-db
                  image: areas_backend_db:latest
                  imagePullPolicy: Never
