kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    namespace: blog
    labels:
        app: areas-service
    name: areas-service
spec:
    ports:
        - name: areas-backend
          port: 80
          targetPort: 7000
    selector:
        app: areas-backend
    type: NodePort
